Avoid QSharedPointer<>::create() because of QTBUG-49824

Avoid QSharedPointer<>::create() beacuse it is broken: If the constructor
throws an exception, it will call the objects destructor.
See https://bugreports.qt.io/browse/QTBUG-49824